# libodbcoci

./: ChangeLog  Makefile.am  README.md  acinclude.m4  appveyor.yml  build.ps1  configure.ac  libodbcpq.spec.in
dpkg/: changelog.in  control  copyright
include/: Makefile.am  libodbcoci.h.in
libodbcoci/: Makefile.am  libodbcoci.c  libodbcoci.rc.in  util.c
